# NUPACK

src/source/: CMakeLists.txt  vcpkg.json
src/source/bind/: Constants.cc  Core.cc  Core.h  Design.cc  Math.cc  Model.cc  Model.h  Thermo.cc
src/source/cmake/: BuildCXX.cmake  BuildPython.cmake  Libraries.cmake  Options.cmake
src/source/include/nupack/: Forward.h
src/source/include/nupack/algorithms/: Constants.h  Extents.h  Macro.h  Numeric.h  Pack.h  Traits.h  Tuple.h  TypeSupport.h  Utility.h
src/source/include/nupack/common/: Config.h  Error.h
src/source/include/nupack/complexes/: ComplexSampler.h
src/source/include/nupack/design/: Constraints.h  Design.h  DesignComponents.h  Objectives.h  Specification.h
src/source/include/nupack/iteration/: Patterns.h  Search.h  Transform.h
src/source/include/nupack/loop/: LoopJoiner.h  StackJoiner.h
src/source/include/nupack/math/: BoundSolve.h  SIMD.h
src/source/package/: python.dockerfile
src/source/parameters/: dna04.1.json  dna04.2.json
src/source/ports/armadillo/: portfile.cmake
src/source/ports/gecode/: portfile.cmake  vcpkg.json
src/source/ports/libsimdpp/: portfile.cmake
src/source/proto/: public.proto
src/source/python/: analysis.py  concentration.py  core.py  model.py  thermo.py
src/source/python/design/: results.py
src/source/solver/: CMakeLists.txt
src/source/solver/include/nupack/concentration/: Equilibrate.h  Solve.h
src/source/source/: Constants.cc  Costs.cc  Engine.cc  Model.cc  Proto.cc  Runtime.cc  Structure.cc  Types.cc  Utility.cc
src/source/source/design/: Constraints.cc  Design.cc  Proto.cc  SequenceAdapter.cc  Specification.cc  ThermoWrapper.cc  Tube.cc
src/source/test/python/: test_design.py  test_notebooks.py
(+44 files in other folders)
